# PolyCrystExtractor

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
docs/vlm_prompts/: mineru_default.md  polymer_crystal_vlm.md
src/common/: __init__.py
src/layer0_ingest/: __init__.py
src/layer1_parse/: __init__.py
src/layer2_extract/: __init__.py  polymer_crystal.py
src/layer3_validate/: __init__.py
src/layer4_export/: __init__.py
tests/test_layer0/: test_placeholder.py
