[project]
name = "polycrystextractor"
version = "0.1.0"
description = "Automated extraction of polymer crystallographic data with physics-informed validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "polymer crystallography",
    "data extraction",
    "materials informatics",
    "ontology population",
    "cheminformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "pydantic>=2.0",
    "requests>=2.28",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "tqdm>=4.60",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "jupyter>=1.0",
    "ipython>=8.0",
]
vlm = [
    "torch>=2.0",
    "transformers>=4.30",
    "accelerate>=0.20",
    "bitsandbytes>=0.40",
    "peft>=0.4",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/yourname/PolyCrystExtractor"
Documentation = "https://yourname.github.io/PolyCrystExtractor"
Repository = "https://github.com/yourname/PolyCrystExtractor.git"
Issues = "https://github.com/yourname/PolyCrystExtractor/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
